# pyramid_debugtoolbar

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGES.txt  CONTRIBUTORS.txt  COPYRIGHT.txt  LICENSE.txt  MANIFEST.in  README.rst  RELEASING.txt  TODO.txt  contributing.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-tests.yml
demo/: .gitignore  README.txt  demo.py  setup.cfg  setup.py  sqla.py  test.py
demo/static/: main.js
demo/templates/: ajax.mako  error.jinja2  error.pt  highorder.mako  index.mako  notfound.mako  sqla.mako
docs/: .gitignore  Makefile  api.rst  changes.rst  conf.py  glossary.rst  index.rst  remake
pyramid_debugtoolbar/: __init__.py  compat.py  console.py  demo.py  ipaddr.py  repr.py  tbtools.py  toolbar.py  toolbar_app.py  utils.py  views.py
pyramid_debugtoolbar/debug/: __init__.py  console.py  repr.py  tbtools.py
pyramid_debugtoolbar/panels/: __init__.py  exception.py  headers.py  introspection.py  logger.py  performance.py  profiler.py  renderings.py  request_vars.py  routes.py  settings.py  sqla.py  sqlalchemy.py  template.py  timer.py  traceback.py  tweens.py  versions.py
pyramid_debugtoolbar/panels/templates/: exception.dbtmako  headers.dbtmako  headers.jinja2  headers.mako  introspection.dbtmako  introspection.mako  logger.dbtmako  logger.jinja2  performance.dbtmako  performance.jinja2  performance.mako  profiler.jinja2  renderings.dbtmako  renderings.jinja2  request_vars.dbtmako  request_vars.jinja2  request_vars.mako  routes.dbtmako  routes.jinja2  settings.dbtmako  settings.jinja2  sqlalchemy.dbtmako  sqlalchemy.jinja2  sqlalchemy.mako  sqlalchemy_explain.dbtmako  sqlalchemy_explain.jinja2  sqlalchemy_select.dbtmako  sqlalchemy_select.jinja2  timer.jinja2  traceback.dbtmako  tweens.dbtmako  tweens.mako  versions.dbtmako  versions.jinja2  versions.mako
pyramid_debugtoolbar/panels/tests/: test_sqla.py
pyramid_debugtoolbar/static/css/: dashboard.css  debugger.css  introspection.css  panel.debugger.css  toolbar.css
pyramid_debugtoolbar/static/debugger/: debugger.css  debugger.js
pyramid_debugtoolbar/static/js/: README.rst  debugger.js  jquery-1.6.4.min.js  jquery-1.7.2.min.js  jquery.tablesorter.min.js  main.js  sse.js  toolbar.js
pyramid_debugtoolbar/static/toolbar/: toolbar.css  toolbar.js  toolbar_button.css
pyramid_debugtoolbar/templates/: base.jinja2  console.dbtmako  console.jinja2  console.mako  exception.dbtmako  exception.jinja2  exception.mako  exception_summary.jinja2  exception_summary.mako  global_tab.dbtmako  history_tab.dbtmako  introspection_index.mako  panel.jinja2  redirect.jinja2  redirect.mako  settings_tab.dbtmako  toolbar.dbtmako  toolbar.jinja2  toolbar.mako
pyramid_debugtoolbar/templates/panels/: debugtoolbar_request_vars.jinja2  renderings.jinja2  request_vars.jinja2  routes.jinja2  (+2 more)
pyramid_debugtoolbar/tests/: test_debug.py  test_init.py  test_ipaddr.py  test_panels.py  test_toolbar.py  test_utils.py  test_views.py
src/pyramid_debugtoolbar/: __init__.py  compat.py  console.py  repr.py  tbtools.py  toolbar.py  toolbar_app.py  utils.py
tests/: test_auth.py  test_debug.py  test_init.py  test_toolbar.py  test_toolbar_app.py  test_utils.py  test_views.py
tests/test_panels/: _utils.py  test_request_vars.py  test_session.py  test_sqla.py
(+36 files in other folders)
