[metadata]
name = pyramid_debugtoolbar
version = 4.9
author = Chris McDonough, Michael Merickel, Casey Duncan, Blaise Laflamme
author_email = pylons-discuss@googlegroups.com
description = A package which provides an interactive HTML debugger for Pyramid application development
long_description = file: README.rst, CHANGES.txt
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE.txt
keywords =
    wsgi
    pylons
    pyramid
    transaction
url = https://docs.pylonsproject.org/projects/pyramid-debugtoolbar/en/latest/
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP :: WSGI
    License :: Repoze Public License

[options]
package_dir =
    =src
packages = find:
zip_safe = False
install_requires =
    ipaddress; python_version<"3.3"
    pyramid>=1.4
    pyramid_mako>=0.3.1
    repoze.lru
    Pygments
include_package_data = True
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
where = src

[options.extras_require]
testing =
    WebTest
    nose
    coverage
    sqlalchemy
    webob
docs =
    Sphinx >= 1.7.5
    pylons-sphinx-themes >= 0.3

[bdist_wheel]
universal = 1

[easy_install]
zip_ok = false

[nosetests]
match=^test
nocapture=1

[aliases]
dev = develop easy_install pyramid_debugtoolbar[testing]
docs = develop easy_install pyramid_debugtoolbar[docs]
