[metadata]
name = pyramid_debugtoolbar
version = 4.12.1
author = Chris McDonough, Michael Merickel, Casey Duncan, Blaise Laflamme
author_email = pylons-discuss@googlegroups.com
description = A package which provides an interactive HTML debugger for Pyramid application development
long_description = file: README.rst, CHANGES.txt
long_description_content_type = text/x-rst
license = BSD
license_files =
    LICENSE.txt
keywords =
    wsgi
    pylons
    pyramid
    transaction
url = https://docs.pylonsproject.org/projects/pyramid-debugtoolbar/en/latest/
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP :: WSGI
    License :: Repoze Public License

[options]
package_dir =
    =src
packages = find:
zip_safe = False
install_requires =
    pyramid>=1.4
    pyramid_mako>=0.3.1
    Pygments
    importlib-metadata; python_version<"3.8"
include_package_data = True
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
testing =
    WebTest
    pytest
    pytest-cov
    sqlalchemy
    webob
docs =
    Sphinx >= 1.7.5
    pylons-sphinx-themes >= 0.3
